Endpoints de category e produtos criados
